<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.dailymoodandmentalhealthjournalapplication.ui.MainActivity">
    <item
        android:id="@+id/action_analytics"
        android:orderInCategory="100"
        android:title="@string/analytics"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="300"
        android:title="@string/logout"
        android:icon="@android:drawable/ic_lock_power_off"
        app:showAsAction="never" />
</menu>